// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Upload Upload baseVue demo works fine 1`] = `
<div
  class="t-space t-space-vertical"
  style="gap: 16px;"
>
  <div
    class="t-space-item"
  >
    <div
      class="t-space t-space-horizontal"
      style="gap: 16px;"
    >
      <div
        class="t-space-item"
      >
        <div
          class="t-radio-group t-size-m t-radio-group--filled"
        >
          <label
            class="t-radio-button t-is-checked"
          >
            <input
              class="t-radio-button__former"
              name=""
              type="radio"
              value="false"
            />
            <span
              class="t-radio-button__input"
            />
            <span
              class="t-radio-button__label"
            >
              单文件上传
            </span>
          </label>
           
          <label
            class="t-radio-button"
          >
            <input
              class="t-radio-button__former"
              name=""
              type="radio"
              value="true"
            />
            <span
              class="t-radio-button__input"
            />
            <span
              class="t-radio-button__label"
            >
              多文件上传
            </span>
          </label>
          <div
            class="t-radio-group__bg-block"
            style="width: 0px; left: 0px;"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="t-space-item"
  >
    <div
      class="t-space t-space-horizontal"
      style="gap: 16px;"
    >
      <div
        class="t-space-item"
      >
        <label
          class="t-checkbox"
        >
          <input
            class="t-checkbox__former"
            type="checkbox"
            value=""
          />
          <span
            class="t-checkbox__input"
          />
          <span
            class="t-checkbox__label"
          >
            禁用状态
          </span>
        </label>
      </div>
      <div
        class="t-space-item"
      >
        <label
          class="t-checkbox t-is-checked"
        >
          <input
            class="t-checkbox__former"
            type="checkbox"
            value=""
          />
          <span
            class="t-checkbox__input"
          />
          <span
            class="t-checkbox__label"
          >
            自动上传
          </span>
        </label>
      </div>
    </div>
  </div>
  <div
    class="t-space-item"
  >
    <br />
  </div>
  <div
    class="t-space-item"
  >
    <div
      class="t-space t-space-horizontal"
      style="gap: 16px;"
    >
      <div
        class="t-space-item"
      >
        <div
          class="t-upload"
        >
          <input
            accept=""
            hidden="hidden"
            type="file"
          />
          <div
            class="t-upload__single t-upload__single-file"
          >
            <div
              class="t-upload__trigger"
            >
              <button
                class="t-button t-size-m t-button--variant-outline t-button--theme-default"
                type="button"
              >
                <svg
                  class="t-icon t-icon-upload"
                  fill="none"
                  height="1em"
                  viewBox="0 0 16 16"
                  width="1em"
                >
                  <path
                    d="M3.74 6.68L7.5 2.9v8.59h1V2.91l3.76 3.77.71-.7-4.62-4.63a.5.5 0 00-.7 0L3.03 5.97l.7.7z"
                    fill="currentColor"
                    fill-opacity="0.9"
                  />
                  <path
                    d="M2 11v2a1 1 0 001 1h10a1 1 0 001-1v-2h-1v2H3v-2H2z"
                    fill="currentColor"
                    fill-opacity="0.9"
                  />
                </svg>
                <span
                  class="t-button__text"
                >
                  选择文件
                </span>
              </button>
            </div>
            <small
              class="t-upload__tips t-size-s"
            >
              要求文件大小在 1M 以内
            </small>
          </div>
        </div>
      </div>
      <div
        class="t-space-item"
      >
        <div
          class="t-upload"
          style="margin-left: 40px;"
        >
          <input
            accept=""
            hidden="hidden"
            type="file"
          />
          <div
            class="t-upload__single t-upload__single-file"
          >
            <div
              class="t-upload__trigger"
            >
              <button
                class="t-button t-size-m t-button--variant-outline t-button--theme-default"
                type="button"
              >
                <svg
                  class="t-icon t-icon-upload"
                  fill="none"
                  height="1em"
                  viewBox="0 0 16 16"
                  width="1em"
                >
                  <path
                    d="M3.74 6.68L7.5 2.9v8.59h1V2.91l3.76 3.77.71-.7-4.62-4.63a.5.5 0 00-.7 0L3.03 5.97l.7.7z"
                    fill="currentColor"
                    fill-opacity="0.9"
                  />
                  <path
                    d="M2 11v2a1 1 0 001 1h10a1 1 0 001-1v-2h-1v2H3v-2H2z"
                    fill="currentColor"
                    fill-opacity="0.9"
                  />
                </svg>
                <span
                  class="t-button__text"
                >
                  重新选择
                </span>
              </button>
            </div>
            <div
              class="t-upload__single-display-text t-upload__display-text--margin"
            >
              <a
                class="t-link t-size-s t-link--theme-default t-link--hover-color t-upload__single-name"
                href="https://tdesign.gtimg.com/site/source/figma-pc.png"
                target="_blank"
              >
                这是一个默认文件
              </a>
              <svg
                class="t-icon t-icon-close t-upload__icon-delete"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
      <div
        class="t-space-item"
      >
        <div
          class="t-upload"
          style="margin-left: 60px;"
        >
          <input
            accept=""
            hidden="hidden"
            type="file"
          />
          <div
            class="t-upload__single t-upload__single-file"
          >
            <div
              class="t-upload__trigger"
            >
              <button
                class="t-button t-size-m t-button--variant-outline t-button--theme-default"
                type="button"
              >
                <svg
                  class="t-icon t-icon-upload"
                  fill="none"
                  height="1em"
                  viewBox="0 0 16 16"
                  width="1em"
                >
                  <path
                    d="M3.74 6.68L7.5 2.9v8.59h1V2.91l3.76 3.77.71-.7-4.62-4.63a.5.5 0 00-.7 0L3.03 5.97l.7.7z"
                    fill="currentColor"
                    fill-opacity="0.9"
                  />
                  <path
                    d="M2 11v2a1 1 0 001 1h10a1 1 0 001-1v-2h-1v2H3v-2H2z"
                    fill="currentColor"
                    fill-opacity="0.9"
                  />
                </svg>
                <span
                  class="t-button__text"
                >
                  选择文件
                </span>
              </button>
            </div>
            <small
              class="t-upload__tips t-size-s"
            >
              文件上传失败示例
            </small>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Upload Upload customDragVue demo works fine 1`] = `
<div
  class="tdesign-demo-upload t-upload"
>
  <button
    class="t-button t-size-m t-button--variant-outline t-button--theme-default"
    type="button"
  >
    <svg
      class="t-icon t-icon-cloud-upload"
      fill="none"
      height="1em"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M4.73 6.26l-.71.09A2.32 2.32 0 002 8.67c0 1.2.89 2.18 2 2.31v1a3.31 3.31 0 01-3-3.31 3.32 3.32 0 012.9-3.32A4.2 4.2 0 018 2c2 0 3.69 1.43 4.1 3.35 1.63.2 2.9 1.6 2.9 3.32a3.31 3.31 0 01-3 3.32v-1c1.11-.14 2-1.11 2-2.32 0-1.22-.9-2.2-2.02-2.32l-.71-.09-.15-.7A3.2 3.2 0 008 3a3.2 3.2 0 00-3.12 2.56l-.15.7z"
        fill="currentColor"
        fill-opacity="0.9"
      />
      <path
        d="M6.14 10.72L7.5 9.39l.03 5.12 1.01-.01-.03-5.1 1.37 1.34.72-.7-2.26-2.2a.5.5 0 00-.7 0l-2.22 2.18.72.7z"
        fill="currentColor"
        fill-opacity="0.9"
      />
    </svg>
    <span
      class="t-button__text"
    >
      点击上传 
    </span>
  </button>
   
  <br />
  <br />
   
  <div
    class="t-upload"
  >
    <input
      accept=""
      hidden="hidden"
      type="file"
    />
    <div
      class="t-upload__dragger t-upload__dragger-center"
    >
      <div
        class="t-upload__trigger"
      >
        <button
          class="t-button t-size-m t-button--variant-base t-button--theme-primary"
          type="button"
        >
          <span
            class="t-button__text"
          >
            自定义拖拽区域
          </span>
        </button>
         
        <!---->
         
        <br />
        <br />
      </div>
    </div>
  </div>
</div>
`;

exports[`Upload Upload draggableVue demo works fine 1`] = `
<div
  class="tdesign-demo-block-column-large"
>
  <div
    class="tdesign-demo-block-column"
  >
    <div>
      是否自动上传：
      <div
        class="t-switch t-size-m t-is-checked"
      >
        <span
          class="t-switch__handle"
        />
        <div
          class="t-switch__content t-size-m"
        />
      </div>
    </div>
     
    <div>
      <div
        class="t-radio-group t-size-m t-radio-group--filled"
      >
        <label
          class="t-radio-button t-is-checked"
        >
          <input
            class="t-radio-button__former"
            name=""
            type="radio"
            value="file"
          />
          <span
            class="t-radio-button__input"
          />
          <span
            class="t-radio-button__label"
          >
            文件拖拽上传
          </span>
        </label>
         
        <label
          class="t-radio-button"
        >
          <input
            class="t-radio-button__former"
            name=""
            type="radio"
            value="image"
          />
          <span
            class="t-radio-button__input"
          />
          <span
            class="t-radio-button__label"
          >
            图片拖拽上传
          </span>
        </label>
        <div
          class="t-radio-group__bg-block"
          style="width: 0px; left: 0px;"
        />
      </div>
    </div>
  </div>
   
  <div
    class="t-space t-space-horizontal"
    style="gap: 16px;"
  >
    <div
      class="t-space-item"
    >
      <div
        class="t-upload"
      >
        <input
          accept=""
          hidden="hidden"
          type="file"
        />
        <div
          class="t-upload__dragger t-upload__dragger-center"
        >
          <div
            class="t-upload__trigger"
          >
            <div>
              <span
                class="t-upload--highlight"
              >
                点击上传
              </span>
              <span>
                  /  拖拽到此区域
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-space-item"
    >
      <div
        class="t-upload"
      >
        <input
          accept=""
          hidden="hidden"
          type="file"
        />
        <div
          class="t-upload__dragger"
        >
          <div
            class="t-upload__dragger-progress"
          >
            <div
              class="t-upload__dragger-progress-info"
            >
              <div
                class="t-upload__dragger-text"
              >
                <span
                  class="t-upload__single-name"
                >
                  默认文件
                </span>
                <svg
                  class="t-icon t-icon-check-circle-filled"
                  fill="none"
                  height="1em"
                  viewBox="0 0 16 16"
                  width="1em"
                >
                  <path
                    d="M8 15A7 7 0 108 1a7 7 0 000 14zM4.5 8.2l.7-.7L7 9.3l3.8-3.8.7.7L7 10.7 4.5 8.2z"
                    fill="currentColor"
                    fill-opacity="0.9"
                  />
                </svg>
              </div>
              <small
                class="t-size-s"
              >
                文件大小：1.0 KB
              </small>
              <small
                class="t-size-s"
              >
                上传日期：2022-09-25
              </small>
              <div
                class="t-upload__dragger-btns"
              />
              <div
                class="t-upload__dragger-btns"
              >
                <button
                  class="t-button t-size-m t-button--variant-text t-button--theme-primary t-upload__dragger-progress-cancel"
                  type="button"
                >
                  <span
                    class="t-button__text"
                  >
                    重新选择
                  </span>
                </button>
                <button
                  class="t-button t-size-m t-button--variant-text t-button--theme-danger t-upload__dragger-delete-btn"
                  type="button"
                >
                  <span
                    class="t-button__text"
                  >
                    删除
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Upload Upload fileFlowListVue demo works fine 1`] = `
<div
  class="t-space t-space-vertical"
  style="gap: 16px;"
>
  <div
    class="t-space-item"
  >
    <div
      class="t-space t-space-horizontal"
      style="gap: 16px;"
    >
      <div
        class="t-space-item"
      >
        <label
          class="t-checkbox"
        >
          <input
            class="t-checkbox__former"
            type="checkbox"
            value=""
          />
          <span
            class="t-checkbox__input"
          />
          <span
            class="t-checkbox__label"
          >
            禁用状态
          </span>
        </label>
      </div>
      <div
        class="t-space-item"
      >
        <label
          class="t-checkbox"
        >
          <input
            class="t-checkbox__former"
            type="checkbox"
            value=""
          />
          <span
            class="t-checkbox__input"
          />
          <span
            class="t-checkbox__label"
          >
            自动上传
          </span>
        </label>
      </div>
      <div
        class="t-space-item"
      >
        <label
          class="t-checkbox"
        >
          <input
            class="t-checkbox__former"
            type="checkbox"
            value=""
          />
          <span
            class="t-checkbox__input"
          />
          <span
            class="t-checkbox__label"
          >
             允许上传同名文件 
          </span>
        </label>
      </div>
      <div
        class="t-space-item"
      >
        <label
          class="t-checkbox"
        >
          <input
            class="t-checkbox__former"
            type="checkbox"
            value=""
          />
          <span
            class="t-checkbox__input"
          />
          <span
            class="t-checkbox__label"
          >
             整体替换上传 
          </span>
        </label>
      </div>
      <div
        class="t-space-item"
      >
        <label
          class="t-checkbox"
        >
          <input
            class="t-checkbox__former"
            type="checkbox"
            value=""
          />
          <span
            class="t-checkbox__input"
          />
          <span
            class="t-checkbox__label"
          >
             多个文件一个请求上传 
          </span>
        </label>
      </div>
    </div>
  </div>
  <div
    class="t-space-item"
  >
    <br />
  </div>
  <div
    class="t-space-item"
  >
    <div
      class="t-upload"
    >
      <input
        accept=""
        hidden="hidden"
        multiple="multiple"
        type="file"
      />
      <div
        class="t-upload__flow t-upload__flow-file-flow"
      >
        <div
          class="t-upload__flow-op"
        >
          <div
            class="t-upload__trigger"
          >
            <button
              class="t-button t-size-m t-button--variant-outline t-button--theme-default"
              type="button"
            >
              <svg
                class="t-icon t-icon-upload"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M3.74 6.68L7.5 2.9v8.59h1V2.91l3.76 3.77.71-.7-4.62-4.63a.5.5 0 00-.7 0L3.03 5.97l.7.7z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
                <path
                  d="M2 11v2a1 1 0 001 1h10a1 1 0 001-1v-2h-1v2H3v-2H2z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
              </svg>
              <span
                class="t-button__text"
              >
                选择文件
              </span>
            </button>
          </div>
          <small
            class="t-upload__flow-placeholder t-upload__placeholder"
          >
            支持批量上传文件，文件格式不限，最多只能上传 10 份文件
          </small>
        </div>
        <div
          class="t-upload__flow-card-area"
        >
          <div
            class="t-upload__flow-empty"
          >
            点击上方“选择文件”或将文件拖拽到此区域
          </div>
        </div>
        <div
          class="t-upload__flow-bottom"
        >
          <button
            class="t-button t-size-m t-button--variant-base t-button--theme-default t-is-disabled"
            disabled="disabled"
            type="button"
          >
            <span
              class="t-button__text"
            >
              取消上传
            </span>
          </button>
          <button
            class="t-button t-size-m t-button--variant-base t-button--theme-primary t-is-disabled"
            disabled="disabled"
            type="button"
          >
            <span
              class="t-button__text"
            >
              点击上传
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Upload Upload imageVue demo works fine 1`] = `
<div
  class="t-space t-space-vertical"
  style="gap: 16px;"
>
  <div
    class="t-space-item"
  >
    <div
      class="t-space t-space-horizontal"
      style="gap: 16px;"
    >
      <div
        class="t-space-item"
      >
        <label
          class="t-checkbox"
        >
          <input
            class="t-checkbox__former"
            type="checkbox"
            value=""
          />
          <span
            class="t-checkbox__input"
          />
          <span
            class="t-checkbox__label"
          >
             禁用状态 
          </span>
        </label>
      </div>
      <div
        class="t-space-item"
      >
        <label
          class="t-checkbox"
        >
          <input
            class="t-checkbox__former"
            type="checkbox"
            value=""
          />
          <span
            class="t-checkbox__input"
          />
          <span
            class="t-checkbox__label"
          >
             多个文件一个请求上传 
          </span>
        </label>
      </div>
      <div
        class="t-space-item"
      >
        <label
          class="t-checkbox t-is-checked"
        >
          <input
            class="t-checkbox__former"
            type="checkbox"
            value=""
          />
          <span
            class="t-checkbox__input"
          />
          <span
            class="t-checkbox__label"
          >
             自动上传 
          </span>
        </label>
      </div>
    </div>
  </div>
  <div
    class="t-space-item"
  >
    <br />
  </div>
  <div
    class="t-space-item"
  >
    <div
      class="t-space t-space-horizontal"
      style="gap: 16px;"
    >
      <div
        class="t-space-item"
      >
        <div
          class="t-upload"
        >
          <input
            accept="image/*"
            hidden="hidden"
            type="file"
          />
          <div>
            <ul
              class="t-upload__card"
            >
              <li
                class="t-upload__card-item t-is-background"
              >
                <div
                  class="t-upload__card-container t-upload__card-box"
                >
                  <svg
                    class="t-icon t-icon-add"
                    fill="none"
                    height="1em"
                    viewBox="0 0 16 16"
                    width="1em"
                  >
                    <path
                      d="M7.35 8.65v3.85h1.3V8.65h3.85v-1.3H8.65V3.5h-1.3v3.85H3.5v1.3h3.85z"
                      fill="currentColor"
                      fill-opacity="0.9"
                    />
                  </svg>
                  <p
                    class="t-size-s"
                  >
                    点击上传图片
                  </p>
                </div>
              </li>
            </ul>
          </div>
          <small
            class="t-upload__tips t-size-s"
          >
            请选择单张图片文件上传（上传成功状态演示）
          </small>
        </div>
      </div>
      <div
        class="t-space-item"
      >
        <div
          class="t-upload"
        >
          <input
            accept="image/*"
            hidden="hidden"
            type="file"
          />
          <div>
            <ul
              class="t-upload__card"
            >
              <li
                class="t-upload__card-item t-is-background"
              >
                <div
                  class="t-upload__card-container t-upload__card-box"
                >
                  <svg
                    class="t-icon t-icon-add"
                    fill="none"
                    height="1em"
                    viewBox="0 0 16 16"
                    width="1em"
                  >
                    <path
                      d="M7.35 8.65v3.85h1.3V8.65h3.85v-1.3H8.65V3.5h-1.3v3.85H3.5v1.3h3.85z"
                      fill="currentColor"
                      fill-opacity="0.9"
                    />
                  </svg>
                  <p
                    class="t-size-s"
                  >
                    点击上传图片
                  </p>
                </div>
              </li>
            </ul>
          </div>
          <small
            class="t-upload__tips t-size-s"
          >
            请选择单张图片文件上传（上传失败状态演示）
          </small>
        </div>
      </div>
    </div>
  </div>
  <div
    class="t-space-item"
  >
    <div
      class="t-upload"
    >
      <input
        accept="image/*"
        hidden="hidden"
        type="file"
      />
      <div>
        <ul
          class="t-upload__card"
        >
          <li
            class="t-upload__card-item t-is-background"
          >
            <div
              class="t-upload__card-content t-upload__card-box"
            >
              <img
                class="t-upload__card-image"
                src="https://tdesign.gtimg.com/demo/demo-image-1.png"
              />
              <div
                class="t-upload__card-mask"
              >
                <span
                  class="t-upload__card-mask-item"
                >
                  <div
                    class="t-image-viewer"
                    style="display: inline-block;"
                  >
                    <svg
                      class="t-icon t-icon-browse"
                      fill="none"
                      height="1em"
                      viewBox="0 0 16 16"
                      width="1em"
                    >
                      <path
                        d="M10.88 8a2.88 2.88 0 11-5.76 0 2.88 2.88 0 015.76 0zm-1 0a1.88 1.88 0 10-3.76 0 1.88 1.88 0 003.76 0z"
                        fill="currentColor"
                        fill-opacity="0.9"
                      />
                      <path
                        d="M1.12 8.23A7.72 7.72 0 008 12.5c2.9 0 5.54-1.63 6.88-4.27L15 8l-.12-.23A7.73 7.73 0 008 3.5a7.74 7.74 0 00-6.88 4.27L1 8l.12.23zM8 11.5A6.73 6.73 0 012.11 8 6.73 6.73 0 0113.9 8 6.74 6.74 0 018 11.5z"
                        fill="currentColor"
                        fill-opacity="0.9"
                      />
                    </svg>
                  </div>
                </span>
                <span
                  class="t-upload__card-mask-item-divider"
                />
                <span
                  class="t-upload__card-mask-item"
                >
                  <svg
                    class="t-icon t-icon-delete"
                    fill="none"
                    height="1em"
                    viewBox="0 0 16 16"
                    width="1em"
                  >
                    <path
                      d="M6 12V6h1v6H6zM9 6v6h1V6H9z"
                      fill="currentColor"
                      fill-opacity="0.9"
                    />
                    <path
                      d="M10.5 3H14v1h-1v10a1 1 0 01-1 1H4a1 1 0 01-1-1V4H2V3h3.5V1.8c0-.44.36-.8.8-.8h3.4c.44 0 .8.36.8.8V3zm-4 0h3V2h-3v1zM4 4v10h8V4H4z"
                      fill="currentColor"
                      fill-opacity="0.9"
                    />
                  </svg>
                </span>
              </div>
            </div>
            <div
              class="t-upload__card-name"
            >
              demo-image-1.png
            </div>
          </li>
        </ul>
      </div>
      <small
        class="t-upload__tips t-size-s"
      >
        请选择单张图片文件上传（自定义预览图片地址）
      </small>
    </div>
  </div>
  <div
    class="t-space-item"
  >
    <div
      class="t-upload"
    >
      <input
        accept="image/*"
        hidden="hidden"
        multiple="multiple"
        type="file"
      />
      <div>
        <ul
          class="t-upload__card"
        >
          <li
            class="t-upload__card-item t-is-background"
          >
            <div
              class="t-upload__card-container t-upload__card-box"
            >
              <svg
                class="t-icon t-icon-add"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M7.35 8.65v3.85h1.3V8.65h3.85v-1.3H8.65V3.5h-1.3v3.85H3.5v1.3h3.85z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
              </svg>
              <p
                class="t-size-s"
              >
                点击上传图片
              </p>
            </div>
          </li>
        </ul>
      </div>
      <small
        class="t-upload__tips t-size-s"
      >
        允许选择多张图片文件上传，最多只能上传 3 张图片
      </small>
    </div>
  </div>
</div>
`;

exports[`Upload Upload imgFlowListVue demo works fine 1`] = `
<div
  class="t-space t-space-vertical"
  style="gap: 16px;"
>
  <div
    class="t-space-item"
  >
    <div>
      
    是否自动上传：
    
      <div
        class="t-switch t-size-m"
      >
        <span
          class="t-switch__handle"
        />
        <div
          class="t-switch__content t-size-m"
        />
      </div>
    </div>
  </div>
  <div
    class="t-space-item"
  >
    <br />
  </div>
  <div
    class="t-space-item"
  >
    <div
      class="t-upload"
    >
      <input
        accept="image/*"
        hidden="hidden"
        multiple="multiple"
        type="file"
      />
      <div
        class="t-upload__flow t-upload__flow-image-flow"
      >
        <div
          class="t-upload__flow-op"
        >
          <div
            class="t-upload__trigger"
          >
            <button
              class="t-button t-size-m t-button--variant-outline t-button--theme-default"
              type="button"
            >
              <svg
                class="t-icon t-icon-upload"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M3.74 6.68L7.5 2.9v8.59h1V2.91l3.76 3.77.71-.7-4.62-4.63a.5.5 0 00-.7 0L3.03 5.97l.7.7z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
                <path
                  d="M2 11v2a1 1 0 001 1h10a1 1 0 001-1v-2h-1v2H3v-2H2z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
              </svg>
              <span
                class="t-button__text"
              >
                选择文件
              </span>
            </button>
          </div>
          <small
            class="t-upload__flow-placeholder t-upload__placeholder"
          >
            支持批量上传图片文件
          </small>
        </div>
        <div
          class="t-upload__flow-card-area"
        >
          <div
            class="t-upload__flow-empty"
          >
            点击上方“选择文件”或将文件拖拽到此区域
          </div>
        </div>
        <div
          class="t-upload__flow-bottom"
        >
          <button
            class="t-button t-size-m t-button--variant-base t-button--theme-default t-is-disabled"
            disabled="disabled"
            type="button"
          >
            <span
              class="t-button__text"
            >
              取消上传
            </span>
          </button>
          <button
            class="t-button t-size-m t-button--variant-base t-button--theme-primary t-is-disabled"
            disabled="disabled"
            type="button"
          >
            <span
              class="t-button__text"
            >
              点击上传
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Upload Upload requestMethodVue demo works fine 1`] = `
<div
  class="tdesign-demo-block-column-large"
>
  <div>
    <div
      class="t-radio-group t-size-m t-radio-group--filled"
    >
      <label
        class="t-radio-button t-is-checked"
      >
        <input
          class="t-radio-button__former"
          name=""
          type="radio"
          value="requestSuccessMethod"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          上传成功示例
        </span>
      </label>
       
      <label
        class="t-radio-button"
      >
        <input
          class="t-radio-button__former"
          name=""
          type="radio"
          value="requestFailMethod"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          上传失败示例
        </span>
      </label>
      <div
        class="t-radio-group__bg-block"
        style="width: 0px; left: 0px;"
      />
    </div>
  </div>
   
  <div
    class="t-upload"
  >
    <input
      accept=""
      hidden="hidden"
      type="file"
    />
    <div
      class="t-upload__single t-upload__single-file"
    >
      <div
        class="t-upload__trigger"
      >
        <button
          class="t-button t-size-m t-button--variant-outline t-button--theme-default"
          type="button"
        >
          <svg
            class="t-icon t-icon-upload"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M3.74 6.68L7.5 2.9v8.59h1V2.91l3.76 3.77.71-.7-4.62-4.63a.5.5 0 00-.7 0L3.03 5.97l.7.7z"
              fill="currentColor"
              fill-opacity="0.9"
            />
            <path
              d="M2 11v2a1 1 0 001 1h10a1 1 0 001-1v-2h-1v2H3v-2H2z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
          <span
            class="t-button__text"
          >
            选择文件
          </span>
        </button>
      </div>
    </div>
    <small
      class="t-upload__tips t-size-s"
    >
      自定义上传方法需要返回成功或失败信息
    </small>
  </div>
</div>
`;

exports[`Upload Upload singleCustomVue demo works fine 1`] = `
<div>
  <div
    class="t-upload"
  >
    <input
      accept=""
      hidden="hidden"
      multiple="multiple"
      type="file"
    />
    <div
      class="t-upload__trigger"
    >
      <button
        class="t-button t-size-m t-button--variant-base t-button--theme-primary"
        type="button"
      >
        <span
          class="t-button__text"
        >
          自定义上传
        </span>
      </button>
    </div>
    <small
      class="t-upload__tips t-size-s"
    >
      上传文件大小在 5M 以内
    </small>
  </div>
   
  <!---->
</div>
`;

exports[`Upload Upload singleInputVue demo works fine 1`] = `
<div
  class="tdesign-demo-upload"
>
  <div
    style="width: 350px;"
  >
    <div
      class="t-upload"
    >
      <input
        accept=""
        hidden="hidden"
        type="file"
      />
      <div
        class="t-upload__single t-upload__single-file-input"
      >
        <div
          class="t-upload__single-input-preview t-input "
        >
          <div
            class="t-input__inner t-upload__placeholder"
          >
            <span
              class="t-upload__single-input-text"
            >
              未选择文件
            </span>
            <svg
              class="t-icon t-icon-close-circle-filled t-upload__single-input-clear"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M15 8A7 7 0 101 8a7 7 0 0014 0zM5.67 4.95L8 7.29l2.33-2.34.7.7L8.7 8l2.34 2.35-.71.7L8 8.71l-2.33 2.34-.7-.7L7.3 8 4.96 5.65l.71-.7z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </div>
        </div>
        <div
          class="t-upload__trigger"
        >
          <button
            class="t-button t-size-m t-button--variant-outline t-button--theme-default"
            type="button"
          >
            <span
              class="t-button__text"
            >
              选择文件
            </span>
          </button>
        </div>
      </div>
      <small
        class="t-upload__tips t-size-s"
      >
        上传文件大小在 5M 以内
      </small>
    </div>
  </div>
</div>
`;

exports[`Upload Upload tableVue demo works fine 1`] = `
<section
  class="tdesign-demo-upload-multiple"
  style="width: 570px;"
>
  <header
    class="tdesign-demo-upload-multiple-header"
  >
    <div
      class="t-upload"
    >
      <input
        accept="image/*"
        hidden="hidden"
        multiple="multiple"
        type="file"
      />
      <div
        class="t-upload__single t-upload__single-file"
      >
        <div
          class="t-upload__trigger"
        >
          <button
            class="t-button t-size-m t-button--variant-outline t-button--theme-default"
            type="button"
          >
            <svg
              class="t-icon t-icon-upload"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M3.74 6.68L7.5 2.9v8.59h1V2.91l3.76 3.77.71-.7-4.62-4.63a.5.5 0 00-.7 0L3.03 5.97l.7.7z"
                fill="currentColor"
                fill-opacity="0.9"
              />
              <path
                d="M2 11v2a1 1 0 001 1h10a1 1 0 001-1v-2h-1v2H3v-2H2z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
            <span
              class="t-button__text"
            >
              选择文件
            </span>
          </button>
        </div>
      </div>
    </div>
  </header>
   
  <div
    class="tdesign-demo-upload-table"
  >
    <div
      class="tdesign-demo-upload-table-header"
    >
      <div
        class="tdesign-demo-upload-table__name"
      >
        文件名
      </div>
       
      <div
        class="tdesign-demo-upload-table__size"
      >
        大小
      </div>
       
      <div
        class="tdesign-demo-upload-table__status"
      >
        状态
      </div>
       
      <div
        class="tdesign-demo-upload-table__operator"
      >
        操作
      </div>
    </div>
     
    <div
      class="tdesign-demo-upload-table--empty"
    >
      <p>
        点击上方“选择文件”或将文件拖拽到此区域
      </p>
    </div>
     
  </div>
   
  <div
    class="tdesign-demo-upload-bottom"
  >
    <button
      class="t-button t-button--line"
    >
      取消
    </button>
     
    <button
      class="t-button t-button--primary"
    >
      开始上传
    </button>
  </div>
</section>
`;
